Proper support for Convox generation 2 and overall tidying.